--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+aiosqlite==0.17.0
 asgiref==3.4.1
 attrs==21.2.0
+certifi==2021.5.30
+charset-normalizer==2.0.4
 click==8.0.1
+databases==0.4.3
 fastapi==0.68.0
 h11==0.12.0
+idna==3.2
 iniconfig==1.1.1
 joblib==1.0.1
 numpy==1.21.2
@@ -13,11 +18,14 @@ pydantic==1.8.2
 pyparsing==2.4.7
 pytest==6.2.4
 python-dotenv==0.19.0
+requests==2.26.0
 scikit-learn==0.24.2
 scipy==1.7.1
 sklearn==0.0
+SQLAlchemy==1.3.24
 starlette==0.14.2
 threadpoolctl==2.2.0
 toml==0.10.2
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 uvicorn==0.15.0
