--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,44 @@
 aiosqlite==0.17.0
+aniso8601==7.0.0
+appdirs==1.4.4
 asgiref==3.4.1
 attrs==21.2.0
+black==21.7b0
 certifi==2021.5.30
 charset-normalizer==2.0.4
 click==8.0.1
 databases==0.4.3
 fastapi==0.68.0
+graphene==2.1.9
+graphql-core==2.3.2
+graphql-relay==2.0.1
 h11==0.12.0
 idna==3.2
 iniconfig==1.1.1
 joblib==1.0.1
+mypy-extensions==0.4.3
 numpy==1.21.2
 packaging==21.0
+pathspec==0.9.0
 pluggy==0.13.1
+promise==2.3
 py==1.10.0
 pydantic==1.8.2
 pyparsing==2.4.7
 pytest==6.2.4
 python-dotenv==0.19.0
+regex==2021.8.3
 requests==2.26.0
+Rx==1.6.1
 scikit-learn==0.24.2
 scipy==1.7.1
+six==1.16.0
 sklearn==0.0
 SQLAlchemy==1.3.24
 starlette==0.14.2
 threadpoolctl==2.2.0
 toml==0.10.2
+tomli==1.2.1
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 uvicorn==0.15.0
