--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       POSTGRES_DB: "${POSTGRES_PASSWORD}"
       PGDATA: /var/lib/postgresql/data
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - appNetwork
 
@@ -36,7 +36,7 @@ services:
     depends_on:
       - postgres
     volumes:
-      - pg-admin-data:/var/lib/pgadmin
+      - postgres-admin-data:/var/lib/pgadmin
     environment:
       PGADMIN_DEFAULT_EMAIL: "${PGADMIN_DEFAULT_EMAIL}"
       PGADMIN_DEFAULT_PASSWORD: "${PGADMIN_DEFAULT_PASSWORD}"
