--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==2.0.4
 click==8.0.1
 databases==0.4.3
 fastapi==0.68.0
+fastapi-jwt-auth==0.5.0
 graphene==2.1.9
 graphql-core==2.3.2
 graphql-relay==2.0.1
@@ -25,6 +26,7 @@ pluggy==0.13.1
 promise==2.3
 py==1.10.0
 pydantic==1.8.2
+PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==6.2.4
 python-dotenv==0.19.0
